--- a/main.html
+++ b/main.html
@@ -39,8 +39,11 @@
   </div><!-- /.navbar -->
 </div>
 
-<section class="first">
+<section id="first">
   <div class="container">
+    <h1>
+      Hi. I am Gaurav Agarwal    
+    </h1>
   </div>
 </section>
 
@@ -96,7 +99,7 @@
               <h3>I'm currently available for freelance work.</h3>
             </header>
             <p>If you have a project that you want to get started, think you need my help with something, then get in touch.</p>
-            <a href="@gmail.com||gauraaga1">gauravag74@gmail.com<i class="email"></i></a>
+            <a href="@gmail.com||gauraga1">gauraga1@gmail.com<i class="email"></i></a>
           </article>
         </div>
       </div>
