modified project structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-   <link href="style.css" rel="stylesheet" />
+   <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -57,7 +57,7 @@
         <div class="col-md-12">
           <article>
             <figure>
-              <img src="hi.png">
+              <img src="./res/hi.png">
             </figure>
             <h3>Hi.</h3>
             <p>I'm a software developer. 
@@ -76,7 +76,7 @@
               <h2>Apparel Recommendation System</h2>
             </header>
             <figure class="project-gif">
-              <img src="ar.gif">
+              <img src="./res/ar.gif">
             </figure>
             <footer>
               <h3>Used idf based word2vec model for converting title to vectors and VGG-16 Convolutional Neural Network for image.</h3>
