updated project details

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
               <img src="./res/ar.gif">
             </figure>
             <footer>
-              <h3>Used idf based word2vec model for converting title to vectors and VGG-16 Convolutional Neural Network for image.</h3>
+              <h3>It uses state of art techniques like word2vec and deep learning.
+              <br/>
+              It uses idf based word2vec model to convert title into 300 dimension word vectors and Convolutional Neural Network (VGG-16) to convert a image into 25K dimension vectors.</h3>
             </footer>
           </article>
         </div>
